# dremio-cloud-dremioframe

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  TEST_RESULTS_SUMMARY.md  V26_CONNECTION_SUMMARY.md  architecture.md  combine_markdown.py  combine_markdown_pdf.py  debug_proto.py  diagnose_flight.py  diagnose_flight_basic.py  diagnose_flight_basic_fixed.py  diagnose_flight_e2e.py  diagnose_flight_inspect.py  discover_flight_port.py  docker-compose.yml  dremioclouddocsgen.py  dremioframe_docs.md  dremioframedocsgen.py  dremiosoftwaredocsgen.py  example.env  example_v26_simple.py  inspect_env.py  mkdocs.yml  publishing.md  pyproject.toml  test_cloud_simple.py  test_flight_auth.py  test_mode_v26.py  test_output.txt  test_v26_connection.py  test_v26_rest_api.py
docs/: admin.md  ai_generation.md  ai_sql.md  api_compatibility.md  builder.md  caching.md  catalog.md  charting.md  cli.md  client.md  connection.md  cookbook.md  data_quality.md  files.md  functions.md  guide_iceberg_management.md  guide_reflections.md  iceberg.md  ingestion.md  ingestion_patterns.md  joins.md  orchestration_backend.md  orchestration_best_practices.md  orchestration_cli.md  orchestration_distributed.md  orchestration_dq_task.md  orchestration_extensions.md  orchestration_iceberg.md  orchestration_reflections.md  orchestration_scheduling.md  orchestration_tasks.md  orchestration_ui.md  plotting.md  recommendations.md  recommendations_docs.md  scd2_guide.md  security.md  testing.md  tutorial_etl.md  udf.md
dremiodocs/: dremio-cloud-about.md  dremio-cloud-admin.md  dremio-cloud-developer.md  dremio-cloud-help-support.md  dremio-cloud-manage-govern.md  dremio-cloud-security.md  dremio-software-data-products.md  dremio-software-data-sources.md  dremio-software-deploy-dremio.md  dremio-software-monitoring.md  readme.md  sql-docs.md
dremioframe/: __init__.py  admin.py  builder.py  catalog.py  cli.py  client.py  functions.py  udf.py
examples/: orchestration_demo.py
scripts/: discover_project.py  fix_markdown_links.py
tests/: conftest.py  test_admin.py  test_admin_reflections.py  test_admin_sources.py  test_ai_agent.py  test_ai_memory_context.py  test_ai_sql_api_live.py  test_airflow.py  test_async_client.py  test_backends.py  test_builder.py  test_builder_explain.py  test_builder_task.py  test_caching.py  test_catalog.py  test_catalog_extended.py  test_cli.py  test_cli_repl.py  (+49 more)
(+146 files in other folders)
