[project]
name = "dremioframe"
version = "0.2.1"
description = "A dataframe-like library for Dremio Cloud & Dremio Software"
authors = [
    {name = "Alex Merced", email = "alexmerced@alexmerced.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "polars>=0.20.0",
    "matplotlib",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/developer-advocacy-dremio/dremio-cloud-dremioframe"
Issues = "https://github.com/developer-advocacy-dremio/dremio-cloud-dremioframe/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
